--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -10,6 +10,8 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 
 The first step is to compile CU-level data to support biological status assessments as described under the Wild Salmon Policy [@holtIndicatorsStatusBenchmarks2009a; @holtEvaluatingBenchmarksBiological2018b], where those data exist. These data include (but are not limited to) time-series of spawner abundances and biological benchmarks on spawner abundances.  This step generally includes aggregating fine-spatial scale data on stocks or spawning sites to the CU level. In some cases, finer spatial scales (e.g., watersheds within CUs) may be considered to delineate serious harm to the SMU. Although CUs are the population unit of assessment and conservation required under the WSP, distribution of spawning within CUs, for example among watersheds, can be an important component of status and these finer scales can be considered. We recommend that decision on spatial scale of conservation be part of the peer-review process for SMU assessments, and be based on biological principles of serious harm and sustainability (e.g., @bradfordReviewBiologicalPrinciples2004a and @dfoCanadaPolicyConservation2005a). <!--CH: could make this a separate step, or explicit sub-step if we want to further emphasize it-->
 
+
+<!--CH: this next pgh needs to be reworked and shortened given the section in the Intro. Same for the section in the WCVK CK case study-->
 For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and are considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and not included in assessments of biological status. Therefore only indicator stocks without significant enhancement were included in our analyses. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating Integrated-Hatchery populations where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. Only stocks with PNI values $\geqslant$ 0.5 were included in the development of LRPs and assessment against those LRPs. Stricter definitions of hatchery enhancement were considered (e.g., including only populations with PNI values $\geqslant$ 0.72, Integrated-Wild populations @withlerGeneticallyBasedTargets2018). In practice, applying this stricter threshold resulted in excluding almost all available data for our case study, West Coast Vancouver Island Chinook Salmon, a species <!-- an SMU? --> that is widely enhanced. Adopting a slightly lower threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding hatchery impacts. <!--CH: comment. some of this text is repeated in the Case Study paper for WCVI CK. Remove the middle two sentences here on PNI, or keep them here, but adjust/shorten them in the Case study paper?
 you could remove it from here or leave in both. 
 --> 
