CH additions  to ch1 Guidelines WP

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -1,7 +1,7 @@
 
 @article{adkisonReviewSalmonSpawnerRecruitment2021,
-  title = {A {{Review}} of {{Salmon Spawner}}-{{Recruitment Analysis}}: The {{Central Role}} of the {{Data}} and {{Its Impact}} on {{Management Strategy}}},
-  shorttitle = {A {{Review}} of {{Salmon Spawner}}-{{Recruitment Analysis}}},
+  title = {A {{Review}} of {{Salmon Spawner-Recruitment Analysis}}: {{The Central Role}} of the {{Data}} and {{Its Impact}} on {{Management Strategy}}},
+  shorttitle = {A {{Review}} of {{Salmon Spawner-Recruitment Analysis}}},
   author = {Adkison, Milo Douglas},
   year = {2021},
   month = sep,
@@ -136,7 +136,7 @@
 }
 
 @article{carwardinePriorityThreatManagement2019,
-  title = {Priority {{Threat Management}} for Biodiversity Conservation: A Handbook},
+  title = {Priority {{Threat Management}} for Biodiversity Conservation: {{A}} Handbook},
   shorttitle = {Priority {{Threat Management}} for Biodiversity Conservation},
   author = {Carwardine, Josie and Martin, Tara G. and Firn, Jennifer and Reyes, Rocio Ponce and Nicol, Sam and Reeson, Andrew and Grantham, Hedley S. and Stratford, Danial and Kehoe, Laura and Chad{\`e}s, Iadine},
   editor = {Lee, Tien Ming},
@@ -246,7 +246,7 @@
 }
 
 @techreport{dfoFisheryDecisionMakingFramework2009,
-  title = {A {{Fishery Decision}}-{{Making Framework Incorporating}} the {{Precautionary Approach}}},
+  title = {A {{Fishery Decision-Making Framework Incorporating}} the {{Precautionary Approach}}},
   author = {DFO},
   year = {2009}
 }
@@ -345,7 +345,7 @@
 }
 
 @article{dowlingEmpiricalHarvestStrategies2015,
-  title = {Empirical Harvest Strategies for Data-Poor Fisheries: A Review of the Literature},
+  title = {Empirical Harvest Strategies for Data-Poor Fisheries: {{A}} Review of the Literature},
   shorttitle = {Empirical Harvest Strategies for Data-Poor Fisheries},
   author = {Dowling, N.A. and Dichmont, C.M. and Haddon, M. and Smith, D.C. and Smith, A.D.M. and Sainsbury, K.},
   year = {2015},
@@ -360,7 +360,7 @@
 }
 
 @article{eckertDivingBackTime2018,
-  title = {Diving Back in Time: Extending Historical Baselines for Yelloweye Rockfish with {{Indigenous}} Knowledge},
+  title = {Diving Back in Time: {{Extending}} Historical Baselines for Yelloweye Rockfish with {{Indigenous}} Knowledge},
   shorttitle = {Diving Back in Time},
   author = {Eckert, Lauren E. and Ban, Natalie C. and Frid, Alejandro and McGreer, Madeleine},
   year = {2018},
@@ -413,7 +413,7 @@
 }
 
 @article{grant2017FraserSockeye2020,
-  title = {The 2017 {{Fraser Sockeye Salmon}} ({{Oncorhynchus}} Nerka) {{Integrated Biological Status Re}}-{{Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
+  title = {The 2017 {{Fraser Sockeye Salmon}} ({{Oncorhynchus}} Nerka) {{Integrated Biological Status Re-Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
   author = {Grant, S C H and Holt, C A and Pestal, G and Davis, B M and MacDonald, B L},
   year = {2020},
   pages = {218},
@@ -432,7 +432,7 @@
 }
 
 @article{grantIntegratedBiologicalStatus2013,
-  title = {Integrated Biological Status Assessment under the {{Wild Salmon Policy}} Using Standardized Metrics and Expert Judgement: Fraser {{River}} Sockeye Salmon ({{Oncorhynchus}} Nerka) Case Studies},
+  title = {Integrated Biological Status Assessment under the {{Wild Salmon Policy}} Using Standardized Metrics and Expert Judgement: {{Fraser River}} Sockeye Salmon ({{Oncorhynchus}} Nerka) Case Studies},
   author = {Grant, S C H and Pestal, G},
   year = {2013},
   volume = {2012/106},
@@ -469,7 +469,7 @@
 
 @techreport{holtEvaluationBenchmarksConservation2009,
   type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
-  title = {Evaluation of {{Benchmarks}} for {{Conservation Units}} in {{Canada}}'s {{Wild Salmon Policy}}: Technical {{Documentation}}},
+  title = {Evaluation of {{Benchmarks}} for {{Conservation Units}} in {{Canada}}'s {{Wild Salmon Policy}}: {{Technical Documentation}}},
   author = {Holt, Carrie A},
   year = {2009},
   number = {2009/059},
@@ -717,6 +717,21 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\ZIJLSLSQ\\Price et al. - 2019 - Genetics of century‐old fish scales reveal populat.pdf}
 }
 
+@article{pricePortfolioSimplificationArising2021a,
+  title = {Portfolio Simplification Arising from a Century of Change in Salmon Population Diversity and Artificial Production},
+  author = {Price, Michael H. H. and Moore, Jonathan W. and Connors, Brendan M. and Wilson, Kyle L. and Reynolds, John D.},
+  year = {2021},
+  month = jul,
+  journal = {Journal of Applied Ecology},
+  volume = {58},
+  number = {7},
+  pages = {1477--1486},
+  issn = {0021-8901, 1365-2664},
+  doi = {10.1111/1365-2664.13835},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\K6R7JARU\\Price et al. - 2021 - Portfolio simplification arising from a century of.pdf}
+}
+
 @article{puntFisheriesManagementClimate2014,
   title = {Fisheries Management under Climate and Environmental Uncertainty: Control Rules and Performance Simulation},
   shorttitle = {Fisheries Management under Climate and Environmental Uncertainty},
@@ -758,6 +773,21 @@
   doi = {10.1111/1365-2664.13789},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\SITPEASH\\Scheuerell et al. - 2021 - An integrated population model for estimating the .pdf}
+}
+
+@article{schindlerPopulationDiversityPortfolio2010a,
+  title = {Population Diversity and the Portfolio Effect in an Exploited Species},
+  author = {Schindler, Daniel E. and Hilborn, Ray and Chasco, Brandon and Boatright, Christopher P. and Quinn, Thomas P. and Rogers, Lauren A. and Webster, Michael S.},
+  year = {2010},
+  month = jun,
+  journal = {Nature},
+  volume = {465},
+  number = {7298},
+  pages = {609--612},
+  issn = {0028-0836, 1476-4687},
+  doi = {10.1038/nature09060},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\7L7ZL3RC\\Schindler et al. - 2010 - Population diversity and the portfolio effect in a.pdf}
 }
 
 @article{statonIncorporatingDemographicInformation2021,
@@ -803,7 +833,7 @@
 }
 
 @article{zhangAccountingNonstationaryStock2021,
-  title = {Accounting for Non-Stationary Stock\textendash Recruitment Relationships in the Development of {{MSY}}-Based Reference Points},
+  title = {Accounting for Non-Stationary Stock\textendash Recruitment Relationships in the Development of {{MSY-based}} Reference Points},
   author = {Zhang, Fan and Regular, Paul M and Wheeland, Laura and Rideout, Rick M and Morgan, M Joanne},
   editor = {Anderson, Emory},
   year = {2021},
