--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -1,48 +1,43 @@
 # INTRODUCTION {#intro}
 
-## Background & Motivation for Project
+## Background
 
 
 Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal
 obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
 
 
-Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumption that the rate of population increase is reduced as density dependence weakens below unfished equilbrium levels. However, increased predation rates or inability to find mates at very low abundances may reduce the the rate of population increase, creating allee effects [@chenIncorporatingAlleeEffects2002a]. LRPs are designated at levels above where these irreversible or only slowly reversible changes occur. <!--omit: Failing to protect stocks above the LRP  means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.-->
+Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumption that the rate of population increase is reduced as density dependence weakens below unfished equilbrium levels. However, increased predation rates or inability to find mates at very low abundances may reduce the the rate of population increase, creating allee effects [@chenIncorporatingAlleeEffects2002a]. LRPs are designated at levels above where these irreversible or only slowly reversible changes occur. <!--CH omit: Failing to protect stocks above the LRP  means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.-->
 
 
+For Pacific salmon, Canada's Wild Salmon Policy, WSP, is DFO's implementation of the Precautionary Approach Framework for Pacific salmon and informs the development of LRPs. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
+
+Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers.  Portfolio effects have been established for numerous salmon stocks, defined as population aggregates containing population and life-history diversity which produce temporally stable recruitment because of the complementary or independent dynamics among sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying CU structure and associated biodiversity [@pricePortfolioSimplificationArising2021a].
+
+Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). <!--CH: I drafted text to address Sue's point. However it introduces complexities that are not highly relevant to our goals, and I'm considering omitting. Thoughts?  I could just mention in the presentation "Due to the differences in metrics of status used by WSP and COSEWIC, buffers have been challenging to identify and in practice red status from WSP assessments tends to align with threatened or endangered designations by COSEWIC."-->One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
 
 
-<!--CH: moved intro to WSP, CUs and benchamrks below and Ch2  here-->
-
-For Pacific salmon, Canada's Wild Salmon Policy, WSP, is DFO's implementation of the Precautionary Approach Framework for Pacific salmon and informs the development of LRPs. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). Biological benchmarks delineating three zones of status, green, amber, and red have been identified to represent zones of increasing conservation concern requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). <!--CH: I drafted text to address Sue's point. However it introduces complexities that are not highly relevant to our goals, and I'm considering omitting. Thoughts?   "Due to the differences in metrics of status used by WSP and COSEWIC, buffers have been challenging to identify and in practice red status from WSP assessments tends to align with threatened or endangered designations by COSEWIC."-->One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
-
-Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], IFR coho [@dfoWildSalmonPolicy2015], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016]), though single metrics, spawning abundances relative to abundance-based benchmarks have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and within (e.g., Barkley sockeye salmon [@chaputConsiderationsDefiningReference2012] and Skeena River sockeye salmon (C. Carr-Harris pers. com.). 
+Status assessments under the WSP generally integrate data across numerous dimensions of population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  This multidimensional framework for assessing assessment status under the WSP has been adopted for several Pacific salmon stocks in Canada (e.g., Fraser River sockeye salmon [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], IFR coho [@dfoWildSalmonPolicy2015], Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]), though formal status assessments under the WSP have not yet been completed for most stocks. Single metrics, spawning abundances relative to abundance-based benchmarks have been used as proxies for status outside of DFO [@pacificsalmonfoundationMethodsAssessingStatus2020] and within DFO in some cases (e.g., Barkley sockeye salmon [@chaputConsiderationsDefiningReference2012]). 
 
 
 
 ## Review of Reference Points for Pacific Salmon
  <!--
-
 CW: Consider changing this subtitle to "Reference Points and management benchmarks for Pacific Salmon populations
-CH: I think we should keep benchmarks as biological values as defined in the WSP, i.e. not management benchmarks. We've spent along time trying to differentiate biologically based benchmarks developed under the WSP for OCPs used in management"
-
- -->
-
-<!--CH I moved the reference to other policies up, and am trying to differentiate LRPs from OCPs, though LRPs can inform OCPs (and are used in them sometimes) I'd like to distinguish them at least theoretically, so added some text explicitly on this above and made some revisions here--> 
+CH: I think we should keep benchmarks as biological values as defined in the WSP, i.e. not management benchmarks. We've spent along time trying to differentiate biologically based benchmarks developed under the WSP for OCPs used in management". Also, I moved the reference to other policies up, and am trying to differentiate LRPs from OCPs, though LRPs can inform OCPs (and are used in them sometimes) I'd like to distinguish them at least theoretically, so added some text explicitly on this above and made some revisions here--> 
 
 LRPs are commonly used in the assessment and management for marine fisheries where they are used to identify and communicate statuses and inform harvest control rules. Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of DFO's Precautionary Approach Framework in 2009. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 12 years after the publication of DFO's Precautionary Approach Framework, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the Framework, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international Policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
-
-
 
 For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. While biological assessments under the WSP are implemented at the scale of Conservation Unit, CU, fisheries management often operates at larger scales, aggregating over multiple CUs. For some stock aggregates, harvest control rules are developed to achieve a low probability of  individual CUs breaching their lower benchmark, among other socio-economic considerations, e.g., Fraser River sockeye salmon [@chaputConsiderationsDefiningReference2012]. This approach supports management of weak stocks and is aligned with DFO's Precautionary Approach Framework [@dfoFisheryDecisionMakingFramework2009].
 
 
-
-Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to marine fisheries. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. In Canada,  multidimensional reference points have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab LRPs incorporate information from CPUE estimates, egg clutches and discards to extend the scope of precaution and efficacy of the management framework. For Pacific salmon, the multidimensional assessment approach introduced by (Pestal et al.) is used to approximate the integrated WSP status assessments for Pacific salmon at the scale of CUs (Holt et al. in review). Here we extend CU assessments based on the multidimensional approach to infer CU-level status.  
+Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to marine fisheries. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab in Canada, where data on CPUE, egg clutches and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018]. For Pacific salmon, the multidimensional assessment approach introduced by (Pestal et al.) is used to approximate the integrated WSP status assessments for Pacific salmon at the scale of CUs (Holt et al. in review). 
 
 Although the application of the precautionary approach for the management of Pacific salmon has focused on setting biological benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised fisheries act includes language indicating that a single LRP may be needed for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Salmon Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision creates the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the risk of component CUs dropping below their lower benchmarks. The present work expands on the previous work on biological benchmarks for Pacific salmon by providing guidance on establishing LRPs for Pacific salmon SMUs. 
 
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC and Management Units under the Pacific Salmon Treaty. These units are not aligned with the biological unit of conservation under DFO's WSP, CU, and are not considered further here.
+
+## Goals of Working Paper
 
 The goals of this working paper were to:
 
@@ -57,31 +52,39 @@ uncertainties arising from missing or limited CU-level data. (See \ref(recommend
 
 Pacific salmon are unique among marine fish species because of their anadromous and semelparous life-history and significant meta-population structure, which results in differences in data availability and modelling approaches for assessments. These differences necessitate advice on LRP development that is specific to Pacific salmon, while being consistent with the principles for LRP development across species (Marentette et al. in prep). <!--CH: add marentette et al. in prep  to zotero,--> 
 
+## Scope of Working Paper
 
--- Enhancement not included
+A companion Working Paper (Holt et al. in review) provides further details on candidate methods for developing LRPs and their implementation on three case studies. While those LRPs are evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
+
+While one role of LRPs is to trigger the development of rebuilding plans under the Fish Stock provisions, the content and implementation of rebuilding plans is beyond the scope of this paper. A full review of how LRPs can be integrated into salmon management processes outside of the Fish Stock provisions is beyond our scope, but is a gap that warrants further discussion. 
+We also do not review the current definition of 'major stock' as a SMU for Pacific salmon under the Fish Stock provisions.
+
+Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those changes, a full review and evaluation of impacts of time-varying parameters on LRPs is beyond our scope though is an important area of future research.
+
+While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009a to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm documented in Pestal et al. (in prep), developed from the implementation of formal WSP assessments for Fraser River Sockeye Salmon [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020], Interior Fraser Coho Salmon [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon [@dfoIntegratedBiologicalStatus2016]. A full review of that algorithm is beyond the scope of this paper. 
+
+Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with managers and stakeholders.
+ 
+
 
 ## Enhancement
 
-For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and are considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and not usually included in assessments of biological status. However separating out the influence of hatchery enhancement in time-series of spawner abundances and recruitment is challenging in part because hatchery-origin fish are not visibly marked and so are indisginguisable from natural-origin spawners. 
+For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and is considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and are not usually included in assessments of biological status. However separating out the influence of hatchery enhancement in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin fish are not usually visibly marked and so are indistinguishable from natural-origin spawners. 
 
 
-Following Withler et al. (2018), we recommend including only populations without significant enhancement in analyses of CU and SMU status. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating Integrated-Hatchery populations where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. Only populations with PNI values $\geqslant$ 0.5 were included in the development of CU status, LRPs and assessment against those LRPs. Stricter definitions of hatchery enhancement were considered (e.g., including only populations with PNI values $\geqslant$ 0.72, Integrated-Wild populations @withlerGeneticallyBasedTargets2018). In practice, applying this stricter threshold resulted in excluding almost all available data for our case study, West Coast Vancouver Island Chinook Salmon, a species <!-- an SMU? --> that is widely enhanced. Adopting a slightly lower threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding hatchery impacts. 
+Following @withlerGeneticallyBasedTargets2018, we recommend including only populations without significant enhancement in analyses of CU and SMU status. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 indicating integrated-transition where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. While these guidelines were developed for Chinook Salmon where hatchery enhancement is most common, they are also applicable to other salmon species [@withlerGeneticallyBasedTargets2018]. 
+
+@withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ) for assessments under the WSP. Similarly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data as consistent time-series are only available for indicator populations where coded-wire tags have been applied, which is exclusively populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011].
 
 
+For integrated-transition and integrated-wild populations, WSP assessments of status have generally removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds are available (e.g., from marking of hatchery-origin fish) [@dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin fish are removed from both the benchmark estimation and metric of stock status. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish are removed from recruitment estimates but not escapement, as it is assumed that these fish reproduce successfully in the wild and contribute to natural production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current metric of stock status, the contribution of hatchery-origin fish is removed from spawner time-series to remove the influence of variability in annual production from hatcheries on current status [@dfoWildSalmonPolicy2015].
 
-(1) When hatchery contributions are high (e.g., PNI<0.5 or when designated as a hatchery for harvest supplementation), then those systems can be entirely removed from assessments of biological status (as in Withler et al. 2018, several Fraser Sockeye Salmon stocks, Grant et al. 2011).
-(2) When hatchery contributions are lower (PNI>0.5 or when designated assessment, conservation or community hatchery), then where possible, hatchery-origin proportions should be identified and removed from time-series of recruitment in stock-recruitment modelling (for estimating benchmarks or in projections). Hatchery-origin fish that spawn in the wild are generally included in escapement time-series assuming these fish reproduce successfully in wild and contribute to production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment.  One caveat is that these assessments differ in the time-series of spawners they use to compare against benchmarks or recovery targets; some use natural-origin spawners only (WSP assessment and RPA) and others total spawners in the natural environment (harvest impact model for PST).  It may be prudent to use natural-origin spawners instead of total spawners in current and historical assessments of trends and status against benchmarks.
-(3) When hatchery contributions are low, but data on proportions of hatchery-origin spawners are not available, generally assessment rely on total spawner abundances regardless of hatchery contribution (as in WSP assessments for SBC Chinook), and stock-recruitment analyses are rarely done on these stocks. There was one example of spawner-recruitment analyses where spawner abundances were determined from brood take plus total spawners in the natural environment, and recruitment was total recruits from both hatchery and natural environment (Pitt River, Grant et al. 2011).
+In some cases where hatchery-origin fish are not marked, data on the proportion of hatchery-origin fish are not available for integrated-transition and integrated-wild populations. In these cases, WSP assessments generally rely on total spawner abundances regardless of hatchery contribution (e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016). In these cases, there may be risks that current status reflects hatchery production which masks changes in natural production. These risks are partly mediated but not dismissed by removing populations that are dominated by hatchery-origin fish from assessments.
+In addition, some populations without hatcheries may be influenced by straying from out-of-basin hatcheries. A very large fraction of fish are wild but gene flow modelling suggests a long-term increasing in genetic influence of hatcheries as straying increases [@withlerGeneticallyBasedTargets2018]. The impact of these strays are generally not included in assessments in part because of absence of visible marking on hatchery fish, and so they are included in total abundances. Studies evaluating the extent of straying for Chinook Salmon in BC are on-going (W. Luedke pers. comm.)
+
+<!--CH remove: Recruitment data are generally not available for these stocks, so stock-recruitment analyses are usualy not implemented. In one exception for Pitt River Sockeye Salmon,  spawner abundances were determined from brood take plus total spawners in the natural environment and recruitment was total recruits from both hatchery and natural environment (Pitt River, Grant et al. 2011).-->
 
 
-<!--CH notes to add  
-•	Intro- maintaining CUs, portfolio effects to add resilience to threats over the long term, maintaining underlying biodiversity is important so it can buffer production during periods of declining productivity, and also ensure we have the diversity to maintain a species through environmental change
-- SKeena paper on detriortaion of portfolio effects, price et al. 2021
-•	Intro: add section on scoping, as outlines in TWG Mtg #16 pptx. Also, do any of the principles from the ppt need to be brought into the paper?
-•	Intro when defining Lower Benchmark: “the lower benchmark is defined as a level of abundance high enough to ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction” : SG: In practice this hasn’t been applied really. In the end a Red status CU largely aligns with an EN COSEWIC DU, etc. etc. I have looked at these comparsisons and really both WSP and COSEWIC align, we are not really creating any buffers b/w COSEWIC listing…so I would delete this as it just has confused things all along. 
-o	“We can revise the background to say that methods have been developed that can calculate benchmarks for all CUs; however, DFO does not yet have a formal CU status for most CUs outside of select Fraser / Southern BC stocks.  We can also spend some time better describing WSP status assessments, as well as how they link to the aggregate LRP requirements of the fisheries act to help reduce the disconnect.    
-o	”
--->
 
 <!--Sabrina email: In short, the management of hatchery produced fish must be separated from wild production. This is a bit tricky for WCVI as we don’t have enough information or data to quantitatively separate ‘natural’ and ‘hatchery’. It would be ideal to remove 1st generation hatchery-origin fish but for WCVI we simply don’t have that information. Strays have been a real issue but hard to quantify the impacts to each non-targeted hatchery system without collecting the data needed annually as each year would differ. How much stray to a particular system and for how long are factors but we don’t assess this enough or adequately. For example, during a M/R project in the Moyeha the 2010 half the samples were hatchery but only 12 samples were collected and the next year all samples were natural origin. 
 We need to be clear to include this uncertainty for WCVI in the report stating results could change if more data was available to adequately and quantitatively (not just I see a clipped salmon or not but genetics and/or more directed projects to the cause) separate the hatchery/1st generation from natural spawners. This is after all a ‘tool-kit’ that has options to choose from but may not have the full picture until gaps are filled. Highlighting the much needed information to properly segregate hatchery to natural spawners would be required to adequately assess.-->
